@@ -68,13 +68,16 @@ The default build settings are tuned for users - if you plan to make changes to 
 | `DEVELOPER`               | `OFF`     | Enable build options suitable for developers⁵.
 | `FASTLINK`                | `OFF`⁶    | Optimize for link speed.
 | `USE_LTO`                 | `ON`²     | Use link-time code generation.
+| `BUILD_TESTS`             | `OFF`⁶    | Build unit tests that can be run using `make check`
+| `RUN_TESTS`               | `OFF`⁷    | Automatically run tests
+| `RUN_TARGET`              | (none)    | Wrapper to run binaries produced in the build process
 1. The builtin charset conversion only supports Windows-1252 and UTF-16LE. This is normally enough for filenames, but custom message strings (which can be included in filenames) may use arbitrary encodings.
 2. Enabled automatically if `CMAKE_BUILD_TYPE` is set to `Debug`.
 3. Under Windows, the default is `ON`.
 4. Default is `ON` if `USE_STATIC_LIBS` is enabled.
-5. Currently this and enables `DEBUG` and `FASTLINK` for faster incremental builds and improved debug output, unless those options have been explicitly specified by the user.
+5. Currently this and enables `DEBUG`, `BUILD_TESTS`, `RUN_TESTS` and `FASTLINK` for faster incremental builds and improved debug output, unless those options have been explicitly specified by the user.
 6. Enabled automatically if `DEVELOPER` is enabled.
-7. Disabled automatically if `SET_OPTIMIZATION_FLAGS` is disabled or `FASTLINK` is enabled.
+7. Enabled automatically if `DEVELOPER` is enabled unless cross-compiling without `RUN_TARGET` set
 
 Install options:
 
